# vga-debugger-generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config_example/: config.json  vga_debugger_template.txt
config_example/piped_cpu/: config.json  vga_debugger_template.txt
config_example/single_cycle_cpu/: config.json  vga_debugger_template.txt
src/: CMakeLists.txt  Config.cpp  Config.h  Template.cpp  Template.h  VgaDebugGenerator.cpp  VgaDebugGenerator.h  Wire.h
vga/: VgaController.v  VgaDisplay.v
